tweak flex setting to prevent overflow

--- a/src/styl/custom/index.styl
+++ b/src/styl/custom/index.styl
@@ -150,7 +150,7 @@ body
     flex: 0 0 auto
 
   .info
-    flex: 1 0 auto
+    flex: 1 0 0
     padding-right: .5em
 
   .brd
