--- a/src/styl/custom/sch001.styl
+++ b/src/styl/custom/sch001.styl
@@ -160,7 +160,7 @@ body
     box-shadow: 0 10px 40px rgba(0,0,0,.3)
 
   .info
-    flex: 1 0 auto
+    flex: 1 0 0
     padding-right: .5em
 
   .brd
